k8s/deployment-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: mongo
    kind: deployment
    type: grafana
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: mongo
      type: grafana
  template:
    metadata:
      labels:
        app: mongo
        type: grafana
    spec:
      containers:
        - name: grafana
          imagePullPolicy: Never
          image: grafana/grafana
          ports:
            - containerPort: 3000
              protocol: TCP
              name: grafana-port
