k8s/service-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    type: service
    app: sharing-service
    kind: db
spec:
  type: ClusterIP
  selector:
    app: mongo
    type: container
  ports:
    - port: 27017
      targetPort: mongo-port
      protocol: TCP
      name: mongo-service-port
