k8s/service-sharing.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-sharing-service
  labels:
    type: service
    app: sharing-service
    db: mongo
    kind: app
spec:
  type: NodePort
  selector:
    app: sharing
    type: container
  ports:
    - port: 80
      targetPort: sharing-port
      protocol: TCP
      name: sharing-service-port
